syntax = "proto3";

package chat;
option go_package = "./";

service ChatService {
  rpc SendMessage (Message) returns (Empty) {}
  rpc Join (User) returns (stream Message) {}
  rpc CheckUsername (User) returns (CheckResponse) {}
  rpc CreateRoom (RoomRequest) returns (RoomResponse) {}
  rpc SwitchChannel (User) returns (Empty) {}

  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
  rpc Verify (VerifyRequest) returns (VerifyResponse) {}
}

message User {
  string name = 1;
  string channel = 2;
}

message Message {
  string user = 1;
  string text = 2;
  int64 timestamp = 3;
  string receiver = 4;
  string channel = 5;
}

message Empty {}

message CheckResponse { bool isTaken = 1; }
message RoomRequest { string name = 1; }
message RoomResponse {
  bool created = 1;
  bool alreadyExists = 2;
}

// Auth section
message RegisterRequest { string name = 1; bytes pubkey = 2; }
message RegisterResponse { bool success = 1; string message = 2; }
message LoginRequest { string name = 1; }
message LoginResponse { bytes nonce = 1; bool success = 2; string message = 3; }
message VerifyRequest { string name = 1; bytes signed = 2; }
message VerifyResponse { bool success = 1; string message = 2; }
